[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Dmitry Vasilenko <vasilenkoda91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isodate = "^0.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
mypy = "^1.7.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
